--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-node_modules/
-jspm_packages/
-package-lock.json
-bin/
+.DS_Store
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
